Teach compiler to read in a source file